apps/pihole/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
  namespace: pihole
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    hajimari.io/appName: Pihole
    hajimari.io/icon: pi-hole
spec:
  parentRefs:
  - name: public-gateway
    namespace: kube-system
    sectionName: https
  hostnames:
  - pihole.lajas.tech
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: pihole
      port: 80
